force-app/main/default/objects/Testicular_Biopsy__c/Testicular_Biopsy__c.object-meta.xml
<CustomObject>
    <label>Testicular Biopsy</label>
    <nameField>
        <displayFormat>TB_{0000}</displayFormat>
        <label>Testicular Biopsy Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Testicular Biopsys</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>