force-app/main/default/objects/Testicular_Biopsy__c/fields/Cycle_Event__c.field-meta.xml
<CustomField>
    <fullName>Cycle_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cycle Event</label>
    <referenceTo>Cycle_Event__c</referenceTo>
    <relationshipLabel>Testicular Biopsys</relationshipLabel>
    <relationshipName>Testicular_Biopsys</relationshipName>
    <type>Lookup</type>
</CustomField>