force-app/main/default/objects/Testicular_Biopsy__c/fields/Semen_Sample__c.field-meta.xml
<CustomField>
    <fullName>Semen_Sample__c</fullName>
    <label>Semen Sample</label>
    <referenceTo>Semen_Sample__c</referenceTo>
    <relationshipLabel>Testicular Biopsy&apos;s</relationshipLabel>
    <relationshipName>Testicular_Biopsys</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>