force-app/main/default/objects/Testicular_Biopsy__c/fields/Side__c.field-meta.xml
<CustomField>
    <fullName>Side__c</fullName>
    <label>Side</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Left</fullName>
            </value>
            <value>
                <fullName>Right</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>