force-app/main/default/objects/Testicular_Biopsy__c/fields/Sperm__c.field-meta.xml
<CustomField>
    <fullName>Sperm__c</fullName>
    <label>Sperm</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>